force-app/main/default/objects/inov8__PMT_Project__c/fields/inov8__End_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>inov8__End_Fiscal_Year__c</fullName>
    <formula>IF($CustomMetadata.inov8__PMT_Setting__mdt.inov8__Default.inov8__Start_Month_of_Fiscal_Year__c!=1 &amp;&amp; Month(inov8__Deadline_formula__c ) &gt;= $CustomMetadata.inov8__PMT_Setting__mdt.inov8__Default.inov8__Start_Month_of_Fiscal_Year__c,
&apos;FY&apos;&amp;RIGHT(TEXT(YEAR(inov8__Deadline_formula__c ) +1),2),
&apos;FY&apos;&amp;RIGHT(TEXT(YEAR(inov8__Deadline_formula__c )),2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Fiscal Year</label>
    <type>Text</type>
</CustomField>