force-app/main/default/objects/inov8__PMT_Project__c/fields/inov8__Owner_s_Department__c.field-meta.xml
<CustomField>
    <fullName>inov8__Owner_s_Department__c</fullName>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Department</label>
    <type>Text</type>
</CustomField>