force-app/main/default/objects/inov8__PMT_Project__c/fields/inov8__Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>inov8__Project_Owner__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>