force-app/main/default/objects/inov8__PMT_Project__c/validationRules/inov8__Path_to_Green_should_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>inov8__Path_to_Green_should_be_blank</fullName>
    <active>true</active>
    <description>Path to Green field should be used only for Late, At Risk or On Hold projects. Please use Health Comment for On Track projects</description>
    <errorConditionFormula>ISBLANK(inov8__Path_to_Green__c  ) &amp;&amp;( ISPICKVAL(inov8__Project_Health__c  , &apos;At Risk&apos;)|| ISPICKVAL(inov8__Project_Health__c  , &apos;On Hold&apos;) ||
 ISPICKVAL(inov8__Project_Health__c  , &apos;Late&apos;))</errorConditionFormula>
    <errorDisplayField>inov8__Path_to_Green__c</errorDisplayField>
    <errorMessage>Path to Green field should be used only for Late, At Risk or On Hold projects. Please use Health Comment for On Track projects</errorMessage>
</ValidationRule>