force-app/main/default/objects/inov8__PMT_Project__c/validationRules/inov8__SOX_Comment_Blank_SOX_Impact_unchecked.validationRule-meta.xml
<ValidationRule>
    <fullName>inov8__SOX_Comment_Blank_SOX_Impact_unchecked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(inov8__SOX_Comment__c&lt;&gt; &apos;&apos;, inov8__SOX_Impact__c=false )</errorConditionFormula>
    <errorMessage>SOX Comment should be blank if SOX Impact is not checked</errorMessage>
</ValidationRule>